--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chat-component",
+  "name": "@isalinaderi/chat-component",
   "private": false,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "files": [
     "dist"
@@ -37,11 +37,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
+    "postcss-import": "^16.0.0",
+    "postcss-preset-env": "^9.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-dts": "^3.7.1",
     "vite-plugin-linter": "^2.0.7",
+    "vite-plugin-scope-tailwind": "^1.1.9",
     "vite-tsconfig-paths": "^4.3.1"
   },
   "repository": {
@@ -58,6 +61,9 @@
   "dependencies": {
     "@icon-park/react": "^1.4.2",
     "antd": "^5.13.1",
+    "emoji-picker-react": "^4.6.13",
+    "framer-motion": "^10.18.0",
+    "prettier": "^3.2.4",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.5.3",
     "react-markdown": "^9.0.1",
